--- a/Zirpl.AppEngine/Zirpl.AppEngine.csproj
+++ b/Zirpl.AppEngine/Zirpl.AppEngine.csproj
@@ -75,6 +75,22 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppGeneration\App.cs" />
+    <Compile Include="AppGeneration\DomainProperty.cs" />
+    <Compile Include="AppGeneration\DomainPropertyExtensions.cs" />
+    <Compile Include="AppGeneration\DomainType.cs" />
+    <Compile Include="AppGeneration\EnumValue.cs" />
+    <Compile Include="AppGeneration\Relationship.cs" />
+    <Compile Include="AppGeneration\_templates\DT_cs.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DT_cs.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AppGeneration\_templates\_Model\DT_Enum_cs.cs">
+      <DependentUpon>DT_Enum_cs.tt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="DataService\Csv\EntityExporter.cs" />
     <Compile Include="DataService\Csv\EntityPropertyDefinition.cs" />
     <Compile Include="DataService\Csv\PropertyType.cs" />
@@ -198,6 +214,14 @@
     <Compile Include="Validation\ValidationUtils.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AppGeneration\_templates\_Model\DT_Enum_cs.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>DT_Enum_cs.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AppGeneration\_templates\DT_cs.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>DT_cs.cs</LastGenOutput>
+    </EmbeddedResource>
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
@@ -208,7 +232,9 @@
       <Name>Zirpl.Common %28Net40%29</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
