--- a/Zirpl.AppEngine.Portable/Zirpl.AppEngine.Portable.csproj
+++ b/Zirpl.AppEngine.Portable/Zirpl.AppEngine.Portable.csproj
@@ -447,9 +447,7 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="AppGeneration\_templates\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
