--- a/Zirpl.AppEngine.VisualStudioAutomation/Zirpl.AppEngine.VisualStudioAutomation.csproj
+++ b/Zirpl.AppEngine.VisualStudioAutomation/Zirpl.AppEngine.VisualStudioAutomation.csproj
@@ -130,13 +130,23 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
-    <Compile Include="AppGeneration\Templates\DataService\EntityFramework\_templates\_DataService\I_DT_DataService_cs.cs">
+    <Compile Include="AppGeneration\Templates\DataService\EntityFramework\_templates\_DataService\Mapping\DT_Mapping_cs.cs">
+      <DependentUpon>DT_Mapping_cs.tt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="AppGeneration\Templates\DataService\_templates\_DataService\I_DT_DataService_cs.cs">
       <DependentUpon>I_DT_DataService_cs.tt</DependentUpon>
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="AppGeneration\Templates\DataService\EntityFramework\_templates\_DataService\DT_DataService_cs.cs">
       <DependentUpon>DT_DataService_cs.tt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="AppGeneration\Templates\Model\_templates\DT_MetadataConstants_cs.cs">
+      <DependentUpon>DT_MetadataConstants_cs.tt</DependentUpon>
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
@@ -216,9 +226,17 @@
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>DT_cs.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="AppGeneration\Templates\DataService\EntityFramework\_templates\_DataService\I_DT_DataService_cs.tt">
+    <EmbeddedResource Include="AppGeneration\Templates\DataService\_templates\_DataService\I_DT_DataService_cs.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>I_DT_DataService_cs.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AppGeneration\Templates\DataService\EntityFramework\_templates\_DataService\Mapping\DT_Mapping_cs.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>DT_Mapping_cs.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AppGeneration\Templates\Model\_templates\DT_MetadataConstants_cs.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>DT_MetadataConstants_cs.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="packages.config" />
   </ItemGroup>
