--- a/Zirpl.Examples.ContactManager.DataService/Zirpl.Examples.ContactManager.DataService/Zirpl.Examples.ContactManager.DataService.csproj
+++ b/Zirpl.Examples.ContactManager.DataService/Zirpl.Examples.ContactManager.DataService/Zirpl.Examples.ContactManager.DataService.csproj
@@ -12,6 +12,8 @@
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,18 +33,103 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.TransientFaultHandling">
+      <HintPath>..\..\packages\EnterpriseLibrary.TransientFaultHandling.6.0.1304.0\lib\portable-net45+win+wp8\Microsoft.Practices.EnterpriseLibrary.TransientFaultHandling.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Zirpl.Logging.Portable, Version=2.1.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Zirpl.Logging.2.1.4\lib\portable-windows8+net40+wp8+sl5+wpa81\Zirpl.Logging.Portable.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="_auto\AppDataContext.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Common\ITagDataService.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Common\TagDataService.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\Common\TagMapping.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\DataContextBase.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\IProjectDataService.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\IProjectImageDataService.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\IProjectUrlDataService.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\ProjectDataService.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\ProjectImageDataService.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\ProjectImageMapping.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\ProjectMapping.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\ProjectUrlDataService.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\ProjectUrlMapping.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Zirpl.AppEngine.EntityFramework\Zirpl.AppEngine.EntityFramework.csproj">
+      <Project>{b23590ec-7c8d-4bd4-bfee-77c0f0d821a7}</Project>
+      <Name>Zirpl.AppEngine.EntityFramework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Zirpl.AppEngine\Zirpl.AppEngine.csproj">
+      <Project>{dd9bcb12-748c-4395-9a8e-a599a60a0caa}</Project>
+      <Name>Zirpl.AppEngine</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Zirpl.Examples.ContactManager.Model\Zirpl.Examples.ContactManager.Model\Zirpl.Examples.ContactManager.Model.csproj">
+      <Project>{cdc844f8-fc12-4c7c-9521-abe19e979c25}</Project>
+      <Name>Zirpl.Examples.ContactManager.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="_auto\App.txt" />
+    <Content Include="_auto\Common\App.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
